# modbus-gateway

./: .gitignore  Cargo.toml  README.md  gateway.toml
src/: error.rs  main.rs
src/capture/: csv.rs  dump.rs  mod.rs  pcap.rs  sink.rs
src/cli/: mod.rs
src/config/: loader.rs  mod.rs  schema.rs  validator.rs
src/metrics/: mod.rs
src/orchestrator/: mod.rs  session.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
